--- a/css/index.css
+++ b/css/index.css
@@ -133,7 +133,10 @@ section img{
 .konten .row{
     margin-bottom: 100px;}
 
-
+footer{
+    background-color: #3B5998;
+    height: 50px;
+}
 
 @media screen and (max-width: 578px) {
     .pintumasuk{
